<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#d4e2eb"
    >
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_to_refresh" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
            android:id="@+id/linearLayoutHome"
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:background="#ADD8E6"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/aflogo"
            android:contentDescription="@string/autofeeder_logo"/>

        <TextView
            android:id="@+id/tvAutoFeederHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/autofeeder"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivSettings"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_gravity="end"
            android:src="@drawable/baseline_settings_24"
            android:contentDescription="@string/settings_icon">
        </ImageView>

    </LinearLayout>

    <Button
        android:id="@+id/btPetHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pet_setup"
        android:textColor="@color/black"
        app:backgroundTint="#4f89ad"
        android:minWidth="137dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutHome"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvBowlStatusHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bowl_level"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@id/tvLvlBowl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFoodLevelHome" />

    <TextView
        android:id="@+id/tvFoodLevelHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="460dp"
        android:text="@string/hopper_level"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvFoodStatusTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvLvlFood" />

    <TextView
        android:id="@+id/tvFoodStatusTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="460dp"
        android:text="@string/autofeeder_status"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/btRefresh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvFoodStatus"/>

    <TextView
        android:id="@+id/tvFoodStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_margin="8dp"
        app:layout_constraintStart_toEndOf="@id/tvFoodStatusTitle"
        app:layout_constraintTop_toTopOf="@id/tvFoodStatusTitle"
        app:layout_constraintBottom_toBottomOf="@id/tvFoodStatusTitle"
        />

    <Button
        android:id="@+id/btFeedHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="16dp"
        android:text="@string/feed_now"
        android:textColor="@color/black"
        app:backgroundTint="#4f89ad"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
       />

    <TextView
        android:id="@+id/tvLvlFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="8dp"
        app:layout_constraintStart_toEndOf="@id/tvFoodLevelHome"
        app:layout_constraintTop_toTopOf="@id/tvFoodLevelHome"
        app:layout_constraintBottom_toBottomOf="@id/tvFoodLevelHome" />

    <TextView
        android:id="@+id/tvLvlBowl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="@id/tvBowlStatusHome"
        app:layout_constraintBottom_toBottomOf="@id/tvBowlStatusHome"
        app:layout_constraintStart_toEndOf="@id/tvBowlStatusHome" />

    <Button
        android:id="@+id/btRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="137dp"
        android:text="@string/home"
        android:textColor="@color/black"
        app:backgroundTint="#ADD8E6"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutHome"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/btPetInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pet_info"
        android:textColor="@color/black"
        app:backgroundTint="#4f89ad"
        android:minWidth="137dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutHome"
        app:layout_constraintEnd_toStartOf="@id/btRefresh"
        app:layout_constraintStart_toEndOf="@id/btPetHome"
        android:textSize="20sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>


