<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    android:background="#d4e2eb">
    <LinearLayout
        android:id="@+id/linearLayoutHome"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:background="#ADD8E6"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/aflogo" />
        <TextView
            android:id="@+id/tvAutoFeederHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autofeeder"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvBTListTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/list_of_bluetooth_devices"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvBTSetup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlHardcoded" />

    <ListView
        android:id="@+id/lvBTList"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:background="#37379E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBTListTitle" />


    <TextView
        android:id="@+id/tvBTList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tvBTListTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvBTSetup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/bluetooth_setup"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/btSetup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlHardcoded" />


    <Button
        android:id="@+id/btSetup"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="#ADD8E6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutHome" />

    <Button
        android:id="@+id/btHomePet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        app:backgroundTint="#4f89ad"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutHome"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btSearchBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_for_autofeeder"
        app:backgroundTint="#4f89ad"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="#4f89ad"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutHome"
        app:layout_constraintStart_toEndOf="@id/btSetup"
        app:layout_constraintEnd_toStartOf="@id/btHomePet"
        />



</androidx.constraintlayout.widget.ConstraintLayout>