<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    android:background="#d4e2eb">
    <LinearLayout
        android:id="@+id/linearLayoutHome"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:background="#ADD8E6"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/aflogo" />
        <TextView
            android:id="@+id/tvAutoFeederHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autofeeder"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/account"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvPetFeederID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlHardcoded"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tvPetFeederIDTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/pet_feeder_id"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btAccount"
        android:layout_marginTop="20dp"
        tools:ignore="RtlHardcoded" />
    <TextView
        android:id="@+id/tvPetFeederID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPetFeederIDTitle"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btSetup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="#4f89ad"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutHome"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:id="@+id/btAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="#ADD8E6"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutHome"
        app:layout_constraintStart_toEndOf="@id/btSetup"
        app:layout_constraintEnd_toStartOf="@id/btHomePet"
        />

    <Button
        android:id="@+id/btHomePet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        app:backgroundTint="#4f89ad"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutHome"
        android:textSize="16sp"/>


    <Button
        android:id="@+id/btSignOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        app:backgroundTint="#4f89ad"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAccount"
        android:textSize="16sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>